k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: super-cool-python-app-1
spec:
  selector:
    app: super-cool-python-app-1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
